--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -61,7 +61,6 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../../js/lib/vconsole/vconsole.min.js"></script>
 		<script type="text/javascript" src="../../js/vue.js"></script>
 		<script src="../../js/utils/utils.js" type="text/javascript" charset="utf-8"></script>
@@ -88,6 +87,7 @@
 			mui.plusReady(function() {
 				curPage = utils.getDataFromUrl(window.location.href);
 				pageFlag = curPage.flag;
+				console.log('pageFlag:'+pageFlag);
 				//获取个人信息
 				personal = store.get(window.storageKeyName.PERSONALINFO);
 				console.log('personal:' + JSON.stringify(personal));
@@ -97,23 +97,23 @@
 			function modifyPassword() {
 				var params = $('#form123').serializeObject();
 				console.log('****************' + JSON.stringify(params));
-				if(params.oldPassword == '') {
-					mui.toast('请输入原密码');
-				} else if(params.oldPassword != personal.passWord0) {
-					mui.toast('原密码输入不正确');
-				} else if(params.newPassword == '') {
-					mui.toast('请输入新密码');
-				} else if(params.confirmPassword == '') {
-					mui.toast('请输入确认密码');
-				} else if(!(params.newPassword === params.confirmPassword)) {
-					mui.toast('两次输入的密码不一致');
-				} else if(params.newPassword === params.oldPassword) {
-					mui.toast('新密码不能与旧密码相同');
-				} else if(!checkPass(params.newPassword)) {
-					mui.toast('密码需为数字和字母的组合');
-				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
-					mui.toast('密码长度需为6到18个字符');
-				} else {
+//				if(params.oldPassword == '') {
+//					mui.toast('请输入原密码');
+//				} else if(params.oldPassword != personal.passWord0) {
+//					mui.toast('原密码输入不正确');
+//				} else if(params.newPassword == '') {
+//					mui.toast('请输入新密码');
+//				} else if(params.confirmPassword == '') {
+//					mui.toast('请输入确认密码');
+//				} else if(!(params.newPassword === params.confirmPassword)) {
+//					mui.toast('两次输入的密码不一致');
+//				} else if(params.newPassword === params.oldPassword) {
+//					mui.toast('新密码不能与旧密码相同');
+//				} else if(!checkPass(params.newPassword)) {
+//					mui.toast('密码需为数字和字母的组合');
+//				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
+//					mui.toast('密码长度需为6到18个字符');
+//				} else {
 					//握手
 					var enData0 = {};
 					//不需要加密的数据
@@ -140,7 +140,7 @@
 								if(pageFlag == 0) {
 									mui.back();
 								} else {
-									utils.hrefSessionStorage('home.html', {});
+									plus.webview.open('../../html/index/home.html');
 								}
 							} else {
 								mui.toast(data.RspTxt);
@@ -160,14 +160,15 @@
 								if(pageFlag == 0) {
 									mui.back();
 								} else {
-									utils.hrefSessionStorage('home.html', {});
+									plus.webview.open('../../html/index/home.html');
+//									utils.hrefSessionStorage('home.html', {});
 								}
 							} else {
 								mui.toast(data.RspTxt);
 							}
 						});
 					}
-				}
+//				}
 			}
 
 			//将输入表单中的内容，转为obj
