--- a/wisdomCampus/html/mine/about.html
+++ b/wisdomCampus/html/mine/about.html
@@ -66,7 +66,10 @@
 			mui.init()
 
 			mui.plusReady(function() {
-				$('#version').html('智慧校园' + plus.runtime.version)
+					plus.runtime.getProperty(plus.runtime.appid, function(inf) {
+						console.log('应用版本号:' + plus.runtime.version + ',资源升级版本号:' + inf.version)
+						$('#version').html('智慧校园' + inf.version)
+					});
 			});
 
 			document.getElementById('qqqq').addEventListener('tap', function() {
