--- a/wisdomCampus/html/index/home.html
+++ b/wisdomCampus/html/index/home.html
@@ -113,16 +113,16 @@
 			}
 			
 			.weui-btn {
-			    line-height: 2.355556;
-			    border-radius: 4px;
+				line-height: 2.355556;
+				border-radius: 4px;
 			}
 			
 			.weui-cell {
-    			padding: 5px 15px;
+				padding: 5px 15px;
 			}
 			
 			.weui-cell:before {
-			    color: #e4e4e4;
+				color: #e4e4e4;
 			}
 		</style>
 
@@ -133,7 +133,7 @@
 			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left"><img style="width: 26px;height: 26px;border-radius: 50%;" :src=userImg /></a>
 			<h1 class="mui-title common-color-white common-font-family-Bold" style="color: white;">首页</h1>
 		</header>
-		
+
 		<div class="mui-scroll-wrapper" style="margin-top: 45px;background: white;">
 			<div class="mui-scroll">
 				<div class="mui-content">
@@ -161,9 +161,9 @@
 				<a v-for="setting in settings" class="weui-cell weui-cell_access" v-on:click="jumpToDetail(setting)">
 					<div class="weui-cell__hd">
 						<img style="width: 20px;height: 20px;margin-top: 5px;" :src=setting.icon></div>
- 					<div class="weui-cell__bd">
+					<div class="weui-cell__bd">
 						<p style="color: black;margin-left: 5px;font-size: 16px;margin-top:5px;">{{setting.name}}</p>
- 					</div>
+					</div>
 				</a>
 				<a class="weui-btn weui-btn_warn" v-on:click="quitLogin">
 					退出登录
@@ -201,6 +201,7 @@
 			mui.init({
 				statusBarBackground: '#63BBFF'
 			});
+
 			document.addEventListener("plusready", function() {
 				message = document.getElementById("message");
 				// 监听点击消息事件
@@ -235,6 +236,11 @@
 				}, false);
 			}, false);
 			mui.plusReady(function() {
+				var wv = plus.webview.currentWebview();
+				// 关闭侧滑返回功能
+				wv.setStyle({
+					'popGesture': 'none'
+				});
 				//安卓的连续点击两次退出程序
 				var backButtonPress = 0;
 				//重写返回键
@@ -251,6 +257,7 @@
 					return false;
 				};
 				document.addEventListener("netchange", wainshow, false);
+
 				function wainshow() {
 					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
 						mui.toast("网络异常，请检查网络设置！");
@@ -265,7 +272,7 @@
 				//12.获取学校资源平台信息
 				getSchoolInfoSource();
 				//判断是否需要更新
-				setTimeout(appUpdate.updateApp(personal.schid), 5000); 
+				setTimeout(appUpdate.updateApp(personal.schid), 5000);
 			});
 			//12.获取学校资源平台信息
 			var getSchoolInfoSource = function() {
@@ -290,8 +297,7 @@
 								noticeCheckFlag++;
 							}
 						}
-					} else {
-					}
+					} else {}
 				});
 			}
 			window.addEventListener('setHeadImg', function(data) {
@@ -299,7 +305,7 @@
 				mine.userImg = data.detail.imgurl;
 				mine1.userImg = data.detail.imgurl;
 			});
-				
+
 			//推送绑定
 			var bindInfo = function() {
 				var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
@@ -350,7 +356,7 @@
 				} else {
 					if(id == 6) {
 						utils.mOpenWithData("../../html/signIn/signInIndex1.html", id);
-					}  else {
+					} else {
 						mui.toast("此功能暂未开放");
 					}
 				}
@@ -397,8 +403,9 @@
 			var mine1 = new Vue({
 				el: "#mine1",
 				data: {
-					userImg:setImg(personal.imgurl)
-				}});
+					userImg: setImg(personal.imgurl)
+				}
+			});
 			var mine = new Vue({
 				el: "#mine",
 				data: {
@@ -421,6 +428,7 @@
 					quitLogin: function() { //退出登录
 						//获取个人信息
 						var personal = store.get(window.storageKeyName.PERSONALINFO);
+						console.log('personal:' + JSON.stringify(personal));
 						//解绑个推
 						var info = plus.push.getClientInfo();
 						var tempBindData = {
@@ -435,28 +443,28 @@
 						//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
 						utils.setBadgeNumber(0, 0);
 						//将个人信息存入原生app
-						if(utils.getSystem() == 'Android') {
-						} else {
+						if(utils.getSystem() == 'Android') {} else {
 							//							window.webkit.messageHandlers.setInfo.postMessage('');
 						}
 						this.isMineShow = false;
-						history.go(-1);
+						utils.hrefSessionStorage("../../html/index/login.html", {});
+						//						utils.mOpenWithData("../../html/index/login.html", {});
 					},
 					jumpToDetail: function(setting) {
 						console.log("dfffff")
 						this.isMineShow = false;
-//						location.href = setting.href;
+						//						location.href = setting.href;
 						var tempModel = {
-									flag: 0 //0是主动修改密码，1是判断是默认密码，自动让修改
-								}
-						if (setting.tempID ==0) {
+							flag: 0 //0是主动修改密码，1是判断是默认密码，自动让修改
+						}
+						if(setting.tempID == 0) {
 							utils.mOpenWithData("../../html/mine/modifyPassword.html", tempModel);
-//							utils.mOpenWithData("../../html/mine/redirectPassword.html", setting);
-						} else if (setting.tempID ==1) {
+							//							utils.mOpenWithData("../../html/mine/redirectPassword.html", setting);
+						} else if(setting.tempID == 1) {
 							utils.mOpenWithData("../../html/mine/about.html", tempModel);
 						}
 					},
-					clickHeadImg:function(){
+					clickHeadImg: function() {
 						this.isMineShow = false;
 						utils.mOpenWithData("../../html/mine/headImg.html", {});
 					}
