--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -5,6 +5,8 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<script type="text/javascript" src="../../js/utils/utils.js"></script>
+		<script type="text/javascript" src="../../js/utils/storageutil.js"></script>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<style type="text/css">
 			.mui-bar-nav {
@@ -97,23 +99,23 @@
 			function modifyPassword() {
 				var params = $('#form123').serializeObject();
 				console.log('****************' + JSON.stringify(params));
-//				if(params.oldPassword == '') {
-//					mui.toast('请输入原密码');
-//				} else if(params.oldPassword != personal.passWord0) {
-//					mui.toast('原密码输入不正确');
-//				} else if(params.newPassword == '') {
-//					mui.toast('请输入新密码');
-//				} else if(params.confirmPassword == '') {
-//					mui.toast('请输入确认密码');
-//				} else if(!(params.newPassword === params.confirmPassword)) {
-//					mui.toast('两次输入的密码不一致');
-//				} else if(params.newPassword === params.oldPassword) {
-//					mui.toast('新密码不能与旧密码相同');
-//				} else if(!checkPass(params.newPassword)) {
-//					mui.toast('密码需为数字和字母的组合');
-//				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
-//					mui.toast('密码长度需为6到18个字符');
-//				} else {
+				if(params.oldPassword == '') {
+					mui.toast('请输入原密码');
+				} else if(params.oldPassword != personal.passWord0) {
+					mui.toast('原密码输入不正确');
+				} else if(params.newPassword == '') {
+					mui.toast('请输入新密码');
+				} else if(params.confirmPassword == '') {
+					mui.toast('请输入确认密码');
+				} else if(!(params.newPassword === params.confirmPassword)) {
+					mui.toast('两次输入的密码不一致');
+				} else if(params.newPassword === params.oldPassword) {
+					mui.toast('新密码不能与旧密码相同');
+				} else if(!checkPass(params.newPassword)) {
+					mui.toast('密码需为数字和字母的组合');
+				} else if(params.newPassword.length > 18 || params.newPassword.length < 6) {
+					mui.toast('密码长度需为6到18个字符');
+				} else {
 					//握手
 					var enData0 = {};
 					//不需要加密的数据
@@ -141,6 +143,9 @@
 									mui.back();
 								} else {
 									plus.webview.open('../../html/index/home.html');
+//									utils.hrefSessionStorage('../../html/index/home.html', {});
+									var curr = plus.webview.currentWebview();
+									curr.close();
 								}
 							} else {
 								mui.toast(data.RspTxt);
@@ -161,14 +166,16 @@
 									mui.back();
 								} else {
 									plus.webview.open('../../html/index/home.html');
-//									utils.hrefSessionStorage('home.html', {});
+//									utils.hrefSessionStorage('../../html/index/home.html', {});
+									var curr = plus.webview.currentWebview();
+									curr.close();
 								}
 							} else {
 								mui.toast(data.RspTxt);
 							}
 						});
 					}
-//				}
+				}
 			}
 
 			//将输入表单中的内容，转为obj
