--- a/wisdomCampus/html/mine/headImg.html
+++ b/wisdomCampus/html/mine/headImg.html
@@ -88,9 +88,9 @@
 				},
 				methods: {
 					modifyImg: function() {
-						if (chenkNetwork()) {
-					return;
-				}
+						if(chenkNetwork()) {
+							return;
+						}
 						if(personal.utp == 0) { //0老师，1学生，2家长
 							var btnArray = [{
 								title: "拍照"
@@ -107,9 +107,9 @@
 									case 0:
 										break;
 									case 1:
-										if (chenkNetwork()) {
-					return;
-				}
+										if(chenkNetwork()) {
+											return;
+										}
 										var cmr = plus.camera.getCamera();
 										cmr.captureImage(function(p) { //打开相机
 											plus.io.resolveLocalFileSystemURL(p, function(entry) { //拍照
@@ -129,9 +129,9 @@
 										});
 										break;
 									case 2:
-										if (chenkNetwork()) {
-					return;
-				}
+										if(chenkNetwork()) {
+											return;
+										}
 										plus.gallery.pick(function(path) { //选照片
 											_compressImage(path, function(event) { //压缩
 												uploadFile(path, index); //上传
@@ -179,7 +179,7 @@
 
 			//上传附件
 			function uploadFile(path, index) {
-				if (chenkNetwork()) {
+				if(chenkNetwork()) {
 					return;
 				}
 				var btnArray = ['否', '是'];
@@ -229,11 +229,17 @@
 			}
 
 			function setHeadImg(result) {
-				peopleInfo.peopleHeadImg = 'http://' + result.RspData
-				personal.imgurl = 'http://' + result.RspData
+				var tempImg = '';
+				if (window.storageKeyName.key == 0) {
+					tempImg = 'http://' + result.RspData;
+				}else{
+					tempImg = 'https://' + result.RspData;
+				}
+				peopleInfo.peopleHeadImg = tempImg;
+				personal.imgurl = tempImg;
 				store.set(window.storageKeyName.PERSONALINFO, personal);
 				mui.fire(plus.webview.currentWebview().opener(), 'setHeadImg', {
-					imgurl: 'http://' + result.RspData
+					imgurl: tempImg
 				});
 			}
 
