孔工接口token续订

--- a/wisdomCampus/html/checkNotice/selectPeople.html
+++ b/wisdomCampus/html/checkNotice/selectPeople.html
@@ -672,7 +672,7 @@
 					}
 				}
 				//再获取上级部门的下级全部部门
-				setSubordinateDepart(array, selectPeopleData.departmentArray);
+//				setSubordinateDepart(array, selectPeopleData.departmentArray);
 			}
 
 			//8.年级下班级
